--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
-    <h1>hola como estas</h1>
-    <h2>hola como estas</h2>
-    <h3>hola como estas</h3>
-    <h4>hola como estas</h4>
-    <h5>hola como estas</h5>
-    <h6>hola como estas</h6>
-    <p>hola como estas</p>
+
+    <!-- header section -->
+    <header id="header">
+        <a href=""><img src="assets/img/logo.png" alt=""></a>
+        <nav>
+            <ul id="navbar">
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- header section -->
+
+    <!-- Hero section  -->
+    <section id="hero">
+        <h4>Trade in Offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all products</h1>
+        <p>Save more with coupons & up to 70% off</p>
+        <button>Shop Now</button>
+    </section>
+    <!-- Hero section  -->
+
+
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
