--- a/index.html
+++ b/index.html
@@ -379,6 +379,19 @@
     </section>
     <!-- Small Banner section -->
 
+    <!-- News letters section -->
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up for Newsletters</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+    <!-- News letters section -->
+
     <script src="assets/js/main.js"></script>
 </body>
 
