--- a/index.html
+++ b/index.html
@@ -392,6 +392,55 @@
     </section>
     <!-- News letters section -->
 
+    <!-- Footer section -->
+    <footer>
+        <div class="col">
+            <img src="assets/img/logo.png" alt="">
+            <h4></h4>
+            <p><strong>Address:</strong> 56/8, thanhdao, thanhdao</p>
+            <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icons">
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-instagram"></i></a>
+                    <a href=""><i class="fa fa-pinterest"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="col install">
+            <h4>Install app</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="assets/img/pay/app.jpg" alt="App Store">
+                <img src="assets/img/pay/play.jpg" alt="Google Play">
+            </div>
+            <p>Secured Payment Options</p>
+            <img src="assets/img/pay/pay.png" alt="Payment">
+        </div>
+        <div class="copyright">
+            <p>© 2021 - 2025, Ecommerce - HTML Ecommerce Template Designed By <span>Ajedev</span></p>
+        </div>
+    </footer>
+    <!-- Footer section -->
+
     <script src="assets/js/main.js"></script>
 </body>
 
