styling logo img

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     <!-- Footer section -->
     <footer>
         <div class="col">
-            <img src="assets/img/logo.png" alt="">
+            <img class="logo" src="assets/img/logo.png" alt="">
             <h4></h4>
             <p><strong>Address:</strong> 56/8, thanhdao, thanhdao</p>
             <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
