--- a/shop.html
+++ b/shop.html
@@ -16,8 +16,8 @@
         <a href=""><img src="assets/img/logo.png" alt=""></a>
         <nav id="nav">
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -33,12 +33,9 @@
     <!-- header section -->
 
     <!-- Hero section  -->
-    <section id="hero">
-        <h4>Trade in Offer</h4>
+    <section id="page-header">
         <h2>Super value deals</h2>
-        <h1>On all products</h1>
         <p>Save more with coupons & up to 70% off</p>
-        <button>Shop Now</button>
     </section>
     <!-- Hero section  -->
 
