--- a/sproduct.html
+++ b/sproduct.html
@@ -39,138 +39,51 @@
     </section>
     <!-- Hero section  -->
 
-    <!-- Featured products section -->
-    <section id="product1" class="section-p1">
-        <div class="pro-container">
-            <div class="pro"  onclick="window.location.href='sproduct.html'">
-                <img src="assets/img/products/f1.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
+    <section id="product-details" class="section-p1">
+        <div class="single-pro-image">
+            <img src="assets/img/products/f1.jpg" id="mainImg" alt="">
+            <div class="small-img-group">
+                <div class="small-img-col">
+                    <img src="assets/img/products/f1.jpg" width="100%" class="small-img" alt="">
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f2.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
+                <div class="small-img-col">
+                    <img src="assets/img/products/f2.jpg" width="100%" class="small-img" alt="">
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f3.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
+                <div class="small-img-col">
+                    <img src="assets/img/products/f3.jpg" width="100%" class="small-img" alt="">
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f4.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
+                <div class="small-img-col">
+                    <img src="assets/img/products/f4.jpg" width="100%" class="small-img" alt="">
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f5.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
+                <div class="small-img-col">
+                    <img src="assets/img/products/f5.jpg" width="100%" class="small-img" alt="">
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="assets/img/products/f6.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
-                </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f7.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
-                </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="assets/img/products/f8.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$149.99</h4>
-                </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-            </div>
+        </div>
+        <div class="single-pro-details">
+            <h6>Product Details</h6>
+            <h4>Home / T-Shirt</h4>
+            <h2>$149.99</h2>
+            <select name="" id="">
+                <option value="">Select Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+            </select>
+            <input type="number" value="1">
+            <button class="normal">Add To Cart</button>
+            <h4>Product Details</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate deleniti suscipit eligendi praesentium
+                eum neque impedit quam fuga itaque velit. Ut similique, iusto veritatis animi a eveniet sapiente vitae
+                consequatur.</p>
+        </div>
+    </section>
 
+    <section id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Summer Collection New modern Design</p>
+        <div class="pro-container">
             <div class="pro">
                 <img src="assets/img/products/n1.jpg" alt="">
                 <div class="des">
@@ -301,45 +214,6 @@
             </div>
         </div>
     </section>
-    <!-- Featured products section -->
-    
-    <!-- Pagination section -->
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="fa fa-long-arrow-right"></i></a>
-    </section>
-
-    <!-- Small Banner section -->
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>Crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is son sale at cara</span>
-            <button class="white">Learn more</button>
-        </div>
-        <div class="banner-box banner-box2">
-            <h4>Spring / Summer</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is son sale at cara</span>
-            <button class="white">Collection</button>
-        </div>
-    </section>
-    <section id="banner3">
-        <div class="banner-box">
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter Collection 50% off</h3>
-        </div>
-        <div class="banner-box banner-box2">
-            <h2>NEW FOOTWEAR COLLECTION</h2>
-            <h3>Spring / Summer 2024</h3>
-        </div>
-        <div class="banner-box banner-box3">
-            <h2>T - SHIRT COLLECTION</h2>
-            <h3>New Trending print</h3>
-        </div>
-    </section>
-    <!-- Small Banner section -->
 
     <!-- News letters section -->
     <section id="newsletter" class="section-p1 section-m1">
@@ -402,7 +276,20 @@
         </div>
     </footer>
     <!-- Footer section -->
+    <script>
+        const /** @type {HTMLElement} */ $mainImg = document.querySelector('#mainImg')
+        const /** @type {NodeListOf<HTMLElement>} */ $smallImg = document.querySelectorAll('.small-img')
+        const /** @type {String} */ $srcMainImg = document.querySelector('#mainImg').src
+        $smallImg.forEach((img) => {
+            img.addEventListener('mouseover', () => {
+                $mainImg.src = img.src
+            })
+            img.addEventListener('mouseout', () => {
+                $mainImg.src = $srcMainImg
+            })
 
+        })
+    </script>
     <script src="assets/js/main.js"></script>
 </body>
 
