styling about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,8 +18,8 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a class="active" href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="lg-cart"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times" aria-hidden="true"></i></a>
@@ -33,68 +33,62 @@
     <!-- header section -->
 
     <!-- Hero section  -->
-    <section id="page-header" class="blog-header">
-        <h2># Read more</h2>
-        <p>Read all case studie about our products</p>
+    <section id="page-header" class="about-header">
+        <h2># Know us</h2>
+        <p> Know about our company</p>
     </section>
-    <!-- Hero section  -->
+    <!-- Hero section  -->  
 
-    <!-- Blog section -->
-    <section id="blog">
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="assets/img/blog/b1.jpg" alt="blog image">
-            </div>
-            <div class="blog-details">
-                <h4>The cotton Jersey zip</h4>
-                <p>Read all case studie about our products <span>Read all case studie about our products</span></p>
-                <a href="#">continue reading</a>
-            </div>
-            <h1>24/07/2025</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="assets/img/blog/b2.jpg" alt="blog image">
-            </div>
-            <div class="blog-details">
-                <h4>The cotton Jersey zip</h4>
-                <p>Read all case studie about our products <span>Read all case studie about our products</span></p>
-                <a href="#">continue reading</a>
-            </div>
-            <h1>24/07/2025</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="assets/img/blog/b3.jpg" alt="blog image">
-            </div>
-            <div class="blog-details">
-                <h4>The cotton Jersey zip</h4>
-                <p>Read all case studie about our products <span>Read all case studie about our products</span></p>
-                <a href="#">continue reading</a>
-            </div>
-            <h1>24/07/2025</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="assets/img/blog/b4.jpg" alt="blog image">
-            </div>
-            <div class="blog-details">
-                <h4>The cotton Jersey zip</h4>
-                <p>Read all case studie about our products <span>Read all case studie about our products</span></p>
-                <a href="#">continue reading</a>
-            </div>
-            <h1>24/07/2025</h1>
+    <section id="about-head" class="section-p1">
+        <img src="assets/img/about/a6.jpg" alt="">
+        <div>
+            <h2>Who We Are ?</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quos voluptate amet impedit nam, facere atque debitis alias assumenda architecto sequi deserunt nisi ullam iure repudiandae libero dolor explicabo modi laudantium beatae ad veniam, ipsam repellat consectetur? Iure laborum atque facere veniam possimus odio dolorem rem voluptatibus distinctio mollitia explicabo laudantium eveniet quaerat, dolorum fugiat minima non. Sunt omnis beatae quo dignissimos repudiandae laborum numquam perferendis veritatis. Cum nam placeat, ex rerum enim fuga unde ipsam nisi nobis obcaecati ipsa. Tenetur nihil ea id unde voluptatem suscipit rerum eius, corrupti odio quo cupiditate mollitia quia molestias natus ullam iste odit dicta, harum ipsum placeat enim facere et. Ad, delectus? Optio quo in labore numquam aliquam expedita molestias ea. Alias, laborum.</p>
+            <abbr title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</abbr>
+            <br><br>
+            <marquee loop="-1" bgcolor="#ccc" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</marquee>
         </div>
     </section>
-    <!-- Blog section -->
 
-    <!-- Pagination section -->
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="fa fa-long-arrow-right"></i></a>
+    <section id="about-app" class="section-p1">
+        <h2>Download Our <a href="http://" target="_blank" rel="noopener noreferrer">App</a></h2>
+        <div class="video">
+            <video autoplay loop muted>
+                <source src="assets/img/about/1.mp4" type="video/mp4">
+            </video>
+        </div>
     </section>
 
+        <!-- Feature section -->
+        <section id="feature" class="section-p1">
+            <div class="fe-box">
+                <img src="assets/img/features/f1.png" alt="">
+                <h6>Free Shipping</h6>
+            </div>
+            <div class="fe-box">
+                <img src="assets/img/features/f2.png" alt="">
+                <h6>Online Order</h6>
+            </div>
+            <div class="fe-box">
+                <img src="assets/img/features/f3.png" alt="">
+                <h6>Save Money</h6>
+            </div>
+            <div class="fe-box">
+                <img src="assets/img/features/f4.png" alt="">
+                <h6>Promotions</h6>
+            </div>
+            <div class="fe-box">
+                <img src="assets/img/features/f5.png" alt="">
+                <h6>Happy Sell</h6>
+            </div>
+            <div class="fe-box">
+                <img src="assets/img/features/f6.png" alt="">
+                <h6>24/7 Support</h6>
+            </div>
+        </section>
+        <!-- Feature section -->
+
+ 
     <!-- News letters section -->
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
